--- a/css/jquery.mobile-1.3.0.css
+++ b/css/jquery.mobile-1.3.0.css
@@ -289,7 +289,7 @@
 /* C
 -----------------------------------------------------------------------------------------------------------*/
 .ui-bar-c {
-	border: 1px solid 		#b3b3b3 /*{c-bar-border}*/;
+	/*border: 1px solid 		#b3b3b3 /*{c-bar-border};*/
 	background: 			#eee /*{c-bar-background-color}*/;
 	color: 					#3e3e3e /*{c-bar-color}*/;
 	font-weight: bold;
@@ -707,19 +707,19 @@ a.ui-link-inherit {
 /* Active class used as the "on" state across all themes
 -----------------------------------------------------------------------------------------------------------*/
 .ui-btn-active {
-	border: 1px solid 		#2373a5 /*{global-active-border}*/;
-	background: 			#5393c5 /*{global-active-background-color}*/;
+	border: 1px solid 		#1E8871 /*{global-active-border}*/;
+	background: 			#23A084 /*{global-active-background-color}*/;
 	font-weight: bold;
 	color: 					#fff /*{global-active-color}*/;
 	cursor: pointer;
-	text-shadow: 0 /*{global-active-shadow-x}*/ 1px /*{global-active-shadow-y}*/ 0 /*{global-active-shadow-radius}*/ #3373a5 /*{global-active-shadow-color}*/;
+	text-shadow: 0 /*{global-active-shadow-x}*/ 1px /*{global-active-shadow-y}*/ 0 /*{global-active-shadow-radius}*/ #209379 /*{global-active-shadow-color}*/;
 	text-decoration: none;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #5393c5 /*{global-active-background-start}*/), to( #6facd5 /*{global-active-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #5393c5 /*{global-active-background-start}*/, #6facd5 /*{global-active-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #5393c5 /*{global-active-background-start}*/, #6facd5 /*{global-active-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #5393c5 /*{global-active-background-start}*/, #6facd5 /*{global-active-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #5393c5 /*{global-active-background-start}*/, #6facd5 /*{global-active-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #5393c5 /*{global-active-background-start}*/, #6facd5 /*{global-active-background-end}*/);
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #23A084 /*{global-active-background-start}*/), to( #29BE9D /*{global-active-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #23A084 /*{global-active-background-start}*/, #29BE9D /*{global-active-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #23A084 /*{global-active-background-start}*/, #29BE9D /*{global-active-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #23A084 /*{global-active-background-start}*/, #29BE9D /*{global-active-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #23A084 /*{global-active-background-start}*/, #29BE9D /*{global-active-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #23A084 /*{global-active-background-start}*/, #29BE9D /*{global-active-background-end}*/);
 	font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-btn-active:visited,
@@ -1041,15 +1041,15 @@ a.ui-link-inherit {
 }
 .ui-focus,
 .ui-btn:focus {
-	-moz-box-shadow: inset 0px 0px 3px 		#387bbe /*{global-active-background-color}*/, 0px 0px 9px 		#387bbe /*{global-active-background-color}*/;
-	-webkit-box-shadow: inset 0px 0px 3px 	#387bbe /*{global-active-background-color}*/, 0px 0px 9px 		#387bbe /*{global-active-background-color}*/;
-	box-shadow: inset 0px 0px 3px 			#387bbe /*{global-active-background-color}*/, 0px 0px 9px 		#387bbe /*{global-active-background-color}*/;
+	-moz-box-shadow: inset 0px 0px 3px 		#1E8871 /*{global-active-background-color}*/, 0px 0px 9px 		#1E8871 /*{global-active-background-color}*/;
+	-webkit-box-shadow: inset 0px 0px 3px 	#1E8871 /*{global-active-background-color}*/, 0px 0px 9px 		#1E8871 /*{global-active-background-color}*/;
+	box-shadow: inset 0px 0px 3px 			#1E8871 /*{global-active-background-color}*/, 0px 0px 9px 		#1E8871 /*{global-active-background-color}*/;
 }
 .ui-input-text.ui-focus,
 .ui-input-search.ui-focus {
-	-moz-box-shadow: 0px 0px 12px 			#387bbe /*{global-active-background-color}*/;
-	-webkit-box-shadow: 0px 0px 12px 		#387bbe /*{global-active-background-color}*/;
-	box-shadow: 0px 0px 12px 					#387bbe /*{global-active-background-color}*/;	
+	-moz-box-shadow: 0px 0px 12px 			#1E8871 /*{global-active-background-color}*/;
+	-webkit-box-shadow: 0px 0px 12px 		#1E8871 /*{global-active-background-color}*/;
+	box-shadow: 0px 0px 12px 					#1E8871 /*{global-active-background-color}*/;	
 }
 /* unset box shadow in browsers that don't do it right
 -----------------------------------------------------------------------------------------------------------*/
@@ -3236,9 +3236,9 @@ div.ui-slider-switch.ui-mini {
 .ui-panel-animate.ui-panel-position-right.ui-panel-display-overlay,
 .ui-panel-animate.ui-panel-position-right.ui-panel-display-push {
 	right: 0;
-	-webkit-transform: translate3d(17em,0,0);
-	-moz-transform: translate3d(17em,0,0);
-	transform: translate3d(17em,0,0);
+	-webkit-transform: translate3d(101%,0,0);
+	-moz-transform: translate3d(101%,0,0);
+	transform: translate3d(101%,0,0);
 }
 /* panel right open */
 .ui-panel-position-right.ui-panel-display-reveal,  /* negate "panel right" for reveal */
