--- a/css/layoutResponsive.css
+++ b/css/layoutResponsive.css
@@ -1,5 +1,7 @@
+
 /* CSS Document */
-*{ font-family:"Trebuchet MS", Arial, Helvetica, sans-serif!important;}
+
+* { font-family: "Trebuchet MS", Arial, Helvetica, sans-serif!important; }
 
 p
 {
@@ -42,40 +44,44 @@ p.colum
 
 #popupPanel .ui-btn { margin: 2em 15px; }
 
-
-.footerBottons{
- background-color:#414141; margin-left:5px; margin-right:5px; height:50px; line-height:50px;
+.footerBottons
+{
+ background-color: #414141;
+ margin-left: 5px;
+ margin-right: 5px;
+ height: 50px;
+ line-height: 50px;
 }
+
 .button
 {
  display: block;
  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
  text-decoration: none!important;
- float:right;
- color:#FFF!important;
- text-shadow:none!important;
- margin-right:13px;
- margin-left:25px;
+ float: right;
+ color: #FFF!important;
+ text-shadow: none!important;
+ margin-right: 13px;
+ margin-left: 25px;
  font-weight: normal!important;
 }
 
-.button img{
+.button img
+{
  margin-right: 5px;
-top: -1px;
-position: relative;}
+ top: -1px;
+ position: relative;
+}
 
 img { max-width: 100%; }
 
-.footerMargin{ margin-top:50px!important;}
-
+.footerMargin { margin-top: 50px!important; }
 
 .header
 {
  height: 60px;
  background-color: #424242;
 }
-
-
 
 .logo
 {
@@ -504,12 +510,14 @@ img { max-width: 100%; }
  float: left;
 }
 
-.ui-grid-a div.blog
+.bloque
 {
- text-align: center;
- margin-top: 2px;
- margin-bottom: 3px;
+ background-color: #FFF;
+ padding: 12px;
+ margin: 5px;
 }
+
+.bloque img { width: 100%; }
 
 .customPanel { background-color: #F0F0F0; }
 
@@ -544,57 +552,49 @@ img { max-width: 100%; }
  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
  color: #006c54;
  float: left;
- margin-bottom:20px!important
+ margin-bottom: 20px!important
 }
 
-.contenedorBlogMore .blogMore
-{
- float: left;
-}
+.contenedorBlogMore .blogMore { float: left; }
 
 .contenedorBlogMore .blogMore img
 {
  float: left;
  margin: 10px;
- margin-left:2px;
+ margin-left: 2px;
  -webkit-box-shadow: 0px 0px 15px 0px #666;
  box-shadow: 0px 0px 15px 0px #666;
- border:6px #fff solid;
+ border: 6px #fff solid;
 }
 
 .contenedorBlogMore .blogMore p
 {
-font-size: 18px!important;
-font-weight: bold!important;
-float: left!important;
-margin-top: 50px;
-color: #4c4c4c;
-width: 200px;
-margin-left: 5px;
+ font-size: 18px!important;
+ font-weight: bold!important;
+ float: left!important;
+ margin-top: 50px;
+ color: #4c4c4c;
+ width: 200px;
+ margin-left: 5px;
 }
 
-.contenedorBlogMore .blogMore:first-child p
-{
-
-margin-top:30px!important;
-}
+.contenedorBlogMore .blogMore:first-child p { margin-top: 30px!important; }
 
 .contenedorBlogMore .blogMore p span { color: #e2061a }
 
-.clear{ clear:both;}
+.clear { clear: both; }
 
-#popupAdd{ width:400px!important;}
+#popupAdd { width: 400px!important; }
 
+.custom .blogMore p { margin-top: 20px; }
 
-
-.custom .blogMore p{margin-top: 20px;}
-.customFieldcontain{
-position: relative!important;
-margin-top: -17px!important;
-float: left!important;
-margin-left: 17px!important;
+.customFieldcontain
+{
+ position: relative!important;
+ margin-top: -17px!important;
+ float: left!important;
+ margin-left: 17px!important;
 }
-
 
 .closeRight
 {
@@ -609,33 +609,36 @@ margin-left: 17px!important;
  text-decoration: none;
 }
 
-.tituloBlog{
-width: 301px;
-height: 59px;
-float: left;
-margin: 12px;
-position: relative;
-background-color: rgba(0,0,0,0.4);
-margin-top: -96px;
-margin-left: 18px;
-text-align:left;
-padding:10px 15px;
-color:#FFF!important;
-text-decoration:none;
-text-shadow: -2px 2px 2px #363636;
-filter: dropshadow(color=#363636, offx=-2, offy=2);
-font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
-font-size:32px;
-line-height:30px;
-text-transform:uppercase;
- }
- 
- 
+.tituloBlog
+{
+ width: 100%;
+ height: 75px;
+ float: left;
+ position: relative;
+ background-color: rgba(0,0,0,0.4);
+ margin-top: -80px;
+}
+
+.tituloBlog p
+{
+ text-decoration: none;
+ text-align: left;
+ text-shadow: -2px 2px 2px #363636;
+ filter: dropshadow(color=#363636, offx=-2, offy=2);
+ font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+ color: #FFF!important;
+ font-size: 32px;
+ line-height: 30px;
+ text-transform: uppercase;
+ margin-left: 20px;
+ margin-top: 5px!important;
+}
 
 /*---RESPONSIVE CONTENEDORES---*/
 
 
 /*--CONTENEDORES--*/
+
 .contentTit
 {
  margin: auto;
@@ -647,8 +650,11 @@ text-transform:uppercase;
  width: 735px;
 }
 
-.contenti{width:735px; margin:auto}
-
+.contenti
+{
+ width: 735px;
+ margin: auto
+}
 
 .logoHome
 {
@@ -656,31 +662,43 @@ text-transform:uppercase;
  margin: auto;
  margin-top: 30px;
 }
-
+.logoHome img
+{
+ width:40%;
+ margin-left:7px;
+}
 /*--CONTENEDORES--*/
 
 
 @media (max-width: 640px) {
-  
-  .contentTit
+
+.contentTit
 {
  margin: auto;
  font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
- font-size: 50px;
+ font-size: 40px;
  text-align: right;
  font-weight: bold;
  color: #c5c5c5;
- width: 620px;
+ width: 600px;
 }
 
-.contenti{width:620px; margin:auto}
-
+.contenti
+{
+ width: 600px;
+ margin: auto
+}
 
 .logoHome
 {
- width: 620px;
+ width: 600px;
  margin: auto;
  margin-top: 30px;
 }
 
+.tituloBlog p
+{
+ font-size: 22px;
+ line-height: 25px;
+}
 }
