--- a/css/layoutResponsive.css
+++ b/css/layoutResponsive.css
@@ -676,29 +676,59 @@ img { max-width: 100%; }
 {
  margin: auto;
  font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
- font-size: 40px;
+ font-size: 20px;
  text-align: right;
  font-weight: bold;
  color: #c5c5c5;
- width: 600px;
+ width: 300px;
 }
 
 .contenti
 {
- width: 600px;
+ width: 300px;
  margin: auto
 }
 
 .logoHome
 {
- width: 600px;
+ width: 300px;
  margin: auto;
  margin-top: 30px;
 }
 
 .tituloBlog p
 {
- font-size: 22px;
- line-height: 25px;
+ font-size: 13px;
+ line-height:18px;
+ margin-left: 10px;
+ margin-top: 5px!important;
 }
+
+.tituloBlog
+{
+ width: 100%;
+ height: 50px;
+ float: left;
+ position: relative;
+ background-color: rgba(0,0,0,0.4);
+ margin-top: -55px;
+}
+
+.button
+{
+ display: block;
+ font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+ text-decoration: none!important;
+ float: right;
+ color: #FFF!important;
+ text-shadow: none!important;
+ margin-right: 13px;
+ margin-left: 25px;
+ font-weight: normal!important;
+ font-size:12px;
+}
+
+
+
+
 }
