--- a/css/layoutResponsive.css
+++ b/css/layoutResponsive.css
@@ -1,5 +1,12 @@
 
 /* CSS Document */
+/* Phone */
+@import url("phone.css") only screen and (max-width:320px);
+/* Tablet */
+@import url("tablet.css") only screen and (min-width:321px) and (max-width:768px);
+/* Desktop */
+@import url("desktop.css") only screen and (min-width:769px);
+
 
 * { font-family: "Trebuchet MS", Arial, Helvetica, sans-serif!important; }
 
@@ -670,65 +677,3 @@ img { max-width: 100%; }
 /*--CONTENEDORES--*/
 
 
-@media (max-width: 640px) {
-
-.contentTit
-{
- margin: auto;
- font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
- font-size: 20px;
- text-align: right;
- font-weight: bold;
- color: #c5c5c5;
- width: 300px;
-}
-
-.contenti
-{
- width: 300px;
- margin: auto
-}
-
-.logoHome
-{
- width: 300px;
- margin: auto;
- margin-top: 30px;
-}
-
-.tituloBlog p
-{
- font-size: 13px;
- line-height:18px;
- margin-left: 10px;
- margin-top: 5px!important;
-}
-
-.tituloBlog
-{
- width: 100%;
- height: 50px;
- float: left;
- position: relative;
- background-color: rgba(0,0,0,0.4);
- margin-top: -55px;
-}
-
-.button
-{
- display: block;
- font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
- text-decoration: none!important;
- float: right;
- color: #FFF!important;
- text-shadow: none!important;
- margin-right: 13px;
- margin-left: 25px;
- font-weight: normal!important;
- font-size:12px;
-}
-
-
-
-
-}
