--- a/css/layoutResponsive.css
+++ b/css/layoutResponsive.css
@@ -1,11 +1,6 @@
 
 /* CSS Document */
-/* Phone */
-@import url("phone.css") only screen and (max-width:320px);
-/* Tablet */
-@import url("tablet.css") only screen and (min-width:321px) and (max-width:768px);
-/* Desktop */
-@import url("desktop.css") only screen and (min-width:769px);
+
 
 
 * { font-family: "Trebuchet MS", Arial, Helvetica, sans-serif!important; }
@@ -82,7 +77,7 @@ p.colum
 
 img { max-width: 100%; }
 
-.footerMargin { margin-top: 50px!important; }
+.footerMargin { margin-top: 30px!important; }
 
 .header
 {
@@ -677,3 +672,123 @@ img { max-width: 100%; }
 /*--CONTENEDORES--*/
 
 
+@media (max-width:320px){
+.contentTit
+{
+ margin: auto;
+ font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
+ font-size: 20px;
+ text-align: right;
+ font-weight: bold;
+ color: #c5c5c5;
+ width: 280px;
+}
+
+.contenti
+{
+ width: 280px;
+ margin: auto
+}
+
+.logoHome
+{
+ width: 280px;
+ margin: auto;
+ margin-top: 30px;
+}
+
+.tituloBlog p
+{
+ font-size: 12px;
+ line-height:18px;
+ margin-left: 10px;
+ margin-top: 5px!important;
+}
+
+.tituloBlog
+{
+ width: 100%;
+ height: 50px;
+ float: left;
+ position: relative;
+ background-color: rgba(0,0,0,0.4);
+ margin-top: -55px;
+}
+
+.button
+{
+ display: block;
+ font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+ text-decoration: none!important;
+ float: right;
+ color: #FFF!important;
+ text-shadow: none!important;
+ margin-right: 7px;
+ margin-left: 10px;
+ font-weight: normal!important;
+ font-size:12px;
+}
+
+.footerMargin { margin-top: 10px!important; }
+
+}
+
+@media  (min-width:321px) and (max-width:768px){
+  .contentTit
+{
+ margin: auto;
+ font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
+ font-size: 40px;
+ text-align: right;
+ font-weight: bold;
+ color: #c5c5c5;
+ width: 600px;
+}
+
+.contenti
+{
+ width: 600px;
+ margin: auto
+}
+
+.logoHome
+{
+ width: 600px;
+ margin: auto;
+ margin-top: 30px;
+}
+
+.tituloBlog p
+{
+ font-size: 23px;
+ line-height:25px;
+ margin-left: 10px;
+ margin-top: 5px!important;
+}
+
+.tituloBlog
+{
+ width: 100%;
+ height: 60px;
+ float: left;
+ position: relative;
+ background-color: rgba(0,0,0,0.4);
+ margin-top: -65px;
+}
+
+.button
+{
+ display: block;
+ font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+ text-decoration: none!important;
+ float: right;
+ color: #FFF!important;
+ text-shadow: none!important;
+ margin-right: 13px;
+ margin-left: 25px;
+ font-weight: normal!important;
+ font-size:22px;
+}
+
+.footerMargin { margin-top: 20px!important; }
+}
