--- a/css/layoutResponsive.css
+++ b/css/layoutResponsive.css
@@ -730,6 +730,22 @@ img { max-width: 100%; }
 }
 
 .footerMargin { margin-top: 10px!important; }
+.bloque
+{
+ background-color: #FFF;
+ padding: 6px;
+ margin: 3px;
+}
+
+.footerBottons
+{
+ background-color: #414141;
+ margin-left: 5px;
+ margin-right: 5px;
+ height: 30px;
+ line-height: 30px;
+}
+
 
 }
 
@@ -791,4 +807,7 @@ img { max-width: 100%; }
 }
 
 .footerMargin { margin-top: 20px!important; }
+
+
+
 }
