--- a/css/layoutResponsive.css
+++ b/css/layoutResponsive.css
@@ -53,6 +53,7 @@ p.colum
  margin-right: 5px;
  height: 50px;
  line-height: 50px;
+ margin-top:10px;
 }
 
 .button
@@ -77,7 +78,7 @@ p.colum
 
 img { max-width: 100%; }
 
-.footerMargin { margin-top: 30px!important; }
+.footerMargin { margin-top: 20px!important; }
 
 .header
 {
