--- a/css/layoutResponsive.css
+++ b/css/layoutResponsive.css
@@ -579,16 +579,22 @@ img { max-width: 100%; }
  width: 200px;
  margin-left: 5px;
 }
-
+#panelOptions .contenedorBlogMore .blogMore{
+ margin-bottom:10px;
+}
+.margin40{
+ padding-bottom:40px!important;
+ }
 #panelOptions .contenedorBlogMore .blogMore p
 {
- font-size: 18px!important;
+ font-size: 13px!important;
  font-weight: bold!important;
  float: left!important;
- margin-top:0!important;
+ margin-top:-7px!important;
  color: #4c4c4c;
  width: 200px;
  margin-left: 5px;
+ float:right!important
 }
 
 .contenedorBlogMore .blogMore:first-child p { margin-top: 30px!important; }
@@ -606,6 +612,7 @@ img { max-width: 100%; }
  position: relative!important;
 top: -17px!important;
  margin-left: 17px!important;
+ float:right;
 }
 
 .closeRight
