--- a/css/layoutResponsive.css
+++ b/css/layoutResponsive.css
@@ -695,6 +695,9 @@ top: -17px!important;
  width:40%;
  margin-left:7px;
 }
+
+.pop{
+ padding-top: 20px;padding-bottom: 20px;padding-left: 25px;}
 /*--CONTENEDORES--*/
 
 
@@ -715,7 +718,13 @@ top: -17px!important;
  width: 280px;
  margin: auto
 }
-
+.logo
+{
+ float: left;
+ margin-top: 13px;
+ position: relative;
+ z-index: 999;
+}
 .logoHome
 {
  width: 280px;
@@ -780,7 +789,7 @@ top: -17px!important;
 }
 .header
 {
- height: 30px;
+ height: 40px;
  background-color:#E0E1DD;
 }
 .logo img{ width:70%;}
@@ -819,6 +828,349 @@ margin-top:0px;
  float:right!important
 }
 
+.blogActual {
+width: 100%;
+text-align: center;
+margin-top: -29px;
+margin-left: 12px;
+}
+.blogActual a{
+ font-size:23px;
+ }
+ 
+.notaPrincipal
+{
+ width:95%;
+ float: left;
+ height: auto;
+ display: block;
+ background-color: #FFFFFF;
+ margin: 5px;
+}
+
+.nota
+{
+ width: 100%;
+ float: left;
+ height: auto;
+ display: block;
+ background-color: #FFFFFF;
+margin: 5px;
+padding: 5px;
+}
+
+.notaDestacada
+{
+ width: 100%;
+ float: left;
+ height: auto;
+ display: block;
+ background-color: #FFFFFF;
+ margin: 5px;
+ padding: 5px;
+}
+
+.notaPrincipal .imagen .titulo
+{
+ font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+ font-size: 22px;
+ color: #373737;
+ float: left;
+ position: relative;
+ z-index: 9999;
+ top: 0px;
+ padding:10px;
+ font-weight: bold;
+ line-height: 24px;
+ text-shadow:none;
+ filter:none;
+}
+
+.notaPrincipal .imagen .contentFechaComent
+{
+ width: 95%;
+ float: left;
+ position: relative;
+ top:0;
+ padding:5px 10px;
+ font-size:12px;
+}
+.notaPrincipal .imagen .contentFechaComent .coment
+{
+ float: left;
+ color: #b2b2b2;
+}
+
+.notaPrincipal .imagen .contentFechaComent .fecha
+{
+ float: left;
+ color: #b2b2b2;
+ margin-right: 10px;
+}
+
+.notaPrincipal .imagen .contentFechaComent .fecha p
+{
+ float: left;
+ margin-left: 10px;
+ margin-top: 0!important;
+ margin-bottom: 0!important;
+}
+.notaPrincipal .imagen
+{
+ height: auto;
+ width: 100%;
+ float: left;
+ position: relative;
+}
+.nota .titulo {
+font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+font-size: 13px;
+color: #373737;
+float: left;
+font-weight: bold;
+line-height: 16px;
+margin-top:5px;
+}
+
+.texto
+{
+ font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+ color: #5e5e5e;
+ font-size:12px;
+ float: left;
+ line-height:14px;
+}
+
+.texto p
+{
+ margin-top: 0!important;
+ margin-bottom: 0!important;
+ padding:10px;
+}
+
+
+.notaDestacada .imagen {
+height: 50%;
+ width: 50%;
+ float: right;
+ position: relative;
+ }
+
+.notaDestacada .titulo
+{
+ font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+ font-size: 22px;
+ color: #373737;
+ float: left;
+ font-weight: bold;
+ line-height: 26px;
+ width:40%;
+}
+
+.notaDestacada .contentFechaComent
+{
+ width: 347px;
+ float: left;
+ margin-top: 6px;
+}
+
+.notaDestacada .contentFechaComent .fecha
+{
+ float: left;
+ color: #b2b2b2;
+ margin-right: 10px;
+}
+
+.notaDestacada .contentFechaComent .fecha p
+{
+ float: left;
+ margin-left: 10px;
+ margin-top: 0!important;
+ margin-bottom: 0!important;
+}
+
+.notaDestacada .contentFechaComent .fecha img { float: left; }
+
+.notaDestacada .contentFechaComent .coment
+{
+ float: left;
+ color: #b2b2b2;
+}
+
+.notaDestacada .contentFechaComent .coment p
+{
+ float: left;
+ margin-left: 10px;
+ margin-top: 0!important;
+ margin-bottom: 0!important;
+}
+
+.notaDestacada .contentFechaComent .coment img { float: left; }
+
+.notaDestacada .texto
+{
+ font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+ color: #5e5e5e;
+ font-size: 14px;
+ float: left;
+ line-height: 24px;
+ width: 330px;
+ margin-top: 10px;
+}
+
+.notaDestacada .texto2
+{
+ font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+ color: #5e5e5e;
+ font-size: 14px;
+ float: left;
+ line-height: 24px;
+}
+
+.notaDestacada .texto p
+{
+ margin-top: 0!important;
+ margin-bottom: 0!important;
+ padding: 0px;
+ width: 330px;
+ float: left;
+}
+
+.notaDestacada .texto2 p
+{
+ margin-top: 0!important;
+ margin-bottom: 0!important;
+ padding: 0px;
+}
+
+.notaPop .notaPrincipal
+{
+ width: 100%;
+ float: left;
+ height: auto;
+ display: block;
+ background-color: #FFFFFF;
+ margin: 5px;
+ padding: 5px;
+}
+
+.notaPop .notaPrincipal .imagen
+{
+ height: auto;
+ width:100%;
+ float: left;
+ position: relative;
+ overflow: hidden;
+}
+
+.notaPop .notaPrincipal .titulo
+{
+ font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+ font-size: 20px;
+ color: #373737;
+ float: left;
+ font-weight: bold;
+ line-height:24px;
+ margin-top: 5px;
+}
+
+.notaPop .notaPrincipal .contentFechaComent
+{
+ width: 100%;
+ float: left;
+ margin-top: 10px;
+}
+
+.notaPop .notaPrincipal .contentFechaComent .fecha
+{
+ float: left;
+ color: #b2b2b2;
+ margin-right: 10px;
+}
+
+.notaPop .notaPrincipal .contentFechaComent .fecha p
+{
+ float: left;
+ margin-left: 10px;
+ margin-top: 0!important;
+ margin-bottom: 0!important;
+ font-size:12px;
+}
+
+.notaPop .notaPrincipal .contentFechaComent .fecha img { float: left; width:18px; }
+
+.notaPop .notaPrincipal .contentFechaComent .coment
+{
+ float: left;
+ color: #b2b2b2;
+
+}
+
+.notaPop .notaPrincipal .contentFechaComent .coment p
+{
+ float: left;
+ margin-left: 10px;
+ margin-top: 0!important;
+ margin-bottom: 0!important;
+   font-size:12px;
+}
+
+.notaPop .notaPrincipal .contentFechaComent .coment img { float: left; width:18px; }
+
+.notaPop .texto
+{
+ font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+ color: #5e5e5e;
+ font-size: 12px;
+ float: left;
+ line-height: 20px;
+ margin-top: 10px;
+ width:95%;
+}
+
+.notaPop .texto p
+{
+ margin-top: 0!important;
+ margin-bottom: 0!important;
+ padding: 0px;
+ float: left;
+}
+
+.contenedorBlogMore {
+float: left;
+width: 360px;
+margin-top: 20px;
+margin-left:0px;
+}
+
+
+.contenedorBlogMore .blogMore { float: left; }
+
+.contenedorBlogMore .blogMore img
+{
+ float: left;
+ width:50px!important;
+ margin: 10px;
+ margin-left: 2px;
+ -webkit-box-shadow: 0px 0px 15px 0px #666;
+ box-shadow: 0px 0px 15px 0px #666;
+ border: 6px #fff solid;
+}
+
+.contenedorBlogMore .blogMore p
+{
+ font-size: 12px!important;
+ font-weight: bold!important;
+ float: left!important;
+ margin-top: 30px!important;
+ color: #4c4c4c;
+ width: 100px;
+ margin-left: 0px;
+}
+
+.popAdd{
+ padding-top: 10px;padding-bottom: 10px;padding-left: 12px;}
+#popupAdd { width: 200px!important; padding:10px;}
 
 
 }
