--- a/css/layoutResponsive.css
+++ b/css/layoutResponsive.css
@@ -848,6 +848,8 @@ margin-left: 12px;
  height: auto;
  display: block;
  background-color: #FFFFFF;
+ margin-left: 0px;
+margin-top: 0px;
 }
 
 .nota
@@ -859,6 +861,7 @@ margin-left: 12px;
  background-color: #FFFFFF;
 margin: 5px;
 padding: 5px;
+margin-left: 0px;
 }
 
 .notaDestacada
@@ -870,6 +873,7 @@ padding: 5px;
  background-color: #FFFFFF;
  margin: 5px;
  padding: 5px;
+ margin-left: 0px;
 }
 
 .notaPrincipal .imagen .titulo
