--- a/css/layoutResponsive.css
+++ b/css/layoutResponsive.css
@@ -849,7 +849,8 @@ margin-left: 12px;
  display: block;
  background-color: #FFFFFF;
  margin-left: 0px;
-margin-top: 0px;
+ margin-top: 0px;
+  margin-bottom:10px;
 }
 
 .nota
@@ -859,7 +860,8 @@ margin-top: 0px;
  height: auto;
  display: block;
  background-color: #FFFFFF;
-margin: 5px;
+ margin:0px;
+ margin-bottom:10px;
 padding: 5px;
 margin-left: 0px;
 }
@@ -871,7 +873,8 @@ margin-left: 0px;
  height: auto;
  display: block;
  background-color: #FFFFFF;
- margin: 5px;
+ margin:0px;
+ margin-bottom:10px;
  padding: 5px;
  margin-left: 0px;
 }
