--- a/css/layoutResponsive.css
+++ b/css/layoutResponsive.css
@@ -1210,6 +1210,12 @@ margin-bottom: 0!important;
 font-size: 13px;
 }
 
+.ui-icon-arrow-r {
+background-position: -119px 0px;
+}
+
+
+
 }
 
 @media  (min-width:321px) and (max-width:520px){
